--- a/Home.html
+++ b/Home.html
@@ -10,19 +10,45 @@
     <header>
         <div class="header-content">
             <img src="your-logo.png" alt="PopLove Logo" id="company-logo">
-            <div class="button-container">
-                <a href="#home" class="header-button">Home</a>
-                <a href="#catering-events" class="header-button">Catering and Events</a>
-                <a href="#contact-us" class="header-button">Contact Us</a>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#products">Our Products</a></li>
+                    <li><a href="#catering-events">Catering and Events</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-    
-    <!-- Add more sections (e.g., About Us, Our Products, Catering Services, Contact) below -->
-    
+
+    <section id="home">
+        <!-- Home section content -->
+    </section>
+
+    <section id="about">
+        <!-- About Us section content -->
+    </section>
+
+    <section id="products">
+        <div class="menu-container">
+            <!-- Display menu items and flavors with images here -->
+        </div>
+    </section>
+
+    <section id="catering-events">
+        <!-- Catering and Events section content -->
+    </section>
+
+    <section id="contact">
+        <!-- Contact Us section content -->
+    </section>
+
     <footer>
         <p>&copy; 2023 PopLove Central Florida | Contact us at [Your Contact Information]</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
 
