--- a/Home.html
+++ b/Home.html
@@ -12,15 +12,15 @@
             <img src="your-logo.png" alt="PopLove Logo" id="company-logo">
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#products">Our Products</a></li>
-                    <li><a href="#catering-events">Catering and Events</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+                   <!-- Add the 'active' class to the current section -->
+                <li><a href="#home" class="header-button active">Home</a></li>
+                <li><a href="#about" class="header-button">About Us</a></li>
+                <li><a href="#products" class="header-button">Our Products</a></li>
+                <!-- Add 'active' class to other menu links as needed -->
+            </ul>
+        </nav>
+    </div>
+</header>
 
     <section id="home">
         <!-- Home section content -->
