--- a/Home.html
+++ b/Home.html
@@ -14,8 +14,8 @@
                 <ul>
                    <!-- Add the 'active' class to the current section -->
                 <li><a href="#home" class="header-button active">Home</a></li>
-                <li><a href="#about" class="header-button">About Us</a></li>
-                <li><a href="#products" class="header-button">Our Products</a></li>
+                <li><a href="#about" class="header-button active">About Us</a></li>
+                <li><a href="#products" class="header-buttonactive">Our Products</a></li>
                 <!-- Add 'active' class to other menu links as needed -->
             </ul>
         </nav>
