--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,9 @@
                    <!-- Add the 'active' class to the current section -->
                 <li><a href="#home" class="header-button active">Home</a></li>
                 <li><a href="#about" class="header-button active">About Us</a></li>
-                <li><a href="#products" class="header-buttonactive">Our Products</a></li>
+                <li><a href="#products" class="header-button active">Our Products</a></li>
+                <li><a href="#catering" class="header-button active">Catering and Events</a></li>
+                <li><a href="#contact" class="header-button active">Contact Us</a></li>
                 <!-- Add 'active' class to other menu links as needed -->
             </ul>
         </nav>
