--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,10 @@
 <body>
     <header>
         <div class="header-content">
+        <div class="logo-container">
             <img src="your-logo.png" alt="PopLove Logo" id="company-logo">
+             <div class="orange-bar"></div>
+             </div>
             <nav>
                 <ul>
                    <!-- Add the 'active' class to the current section -->
