--- a/Home.html
+++ b/Home.html
@@ -3,57 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PopLove Central Florida</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>PopLove Gelato Pops</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/script.js"></script>
 </head>
 <body>
     <header>
-        <div class="header-content">
         <div class="logo-container">
-            <img src="your-logo.png" alt="PopLove Logo" id="company-logo">
-             <div class="orange-bar"></div>
-             </div>
+            <img src="../images/your-logo.png" alt="PopLove Logo" id="company-logo">
+        </div>
+        <div class="header-content">
             <nav>
                 <ul>
-                   <!-- Add the 'active' class to the current section -->
-                <li><a href="#home" class="header-button active">Home</a></li>
-                <li><a href="#about" class="header-button active">About Us</a></li>
-                <li><a href="#products" class="header-button active">Our Products</a></li>
-                <li><a href="#catering" class="header-button active">Catering and Events</a></li>
-                <li><a href="#contact" class="header-button active">Contact Us</a></li>
-                <!-- Add 'active' class to other menu links as needed -->
-            </ul>
-        </nav>
-    </div>
-</header>
+                    <li><a href="#home" class="header-button">Home</a></li>
+                    <li><a href="#about" class="header-button">About Us</a></li>
+                    <li><a href="#events" class="header-button">Events</a></li>
+                    <li><a href="#catering" class="header-button">Catering</a></li>
+                    <li><a href="#menu" class="header-button">Menu</a></li>
+                    <li><a href="#contact" class="header-button">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <!-- Home Section -->
     <section id="home">
-        <!-- Home section content -->
+        <!-- Your home section content goes here -->
     </section>
 
+    <!-- About Us Section -->
     <section id="about">
-        <!-- About Us section content -->
-    </section>
-
-    <section id="products">
-        <div class="menu-container">
-            <!-- Display menu items and flavors with images here -->
+        <div class="section-content">
+            <h2>About Us</h2>
+            <p>We are two entrepreneurial mothers who embarked on a journey to bring the joy of authentic artisan gelato to you. Our passion for crafting delightful treats led to the creation of PopLove Gelato Pops.</p>
+            <img src="../images/your-image.jpg" alt="Image of Us" class="about-us-image">
+            <!-- Add more content about your journey and values here -->
         </div>
     </section>
 
-    <section id="catering-events">
-        <!-- Catering and Events section content -->
+    <!-- Events Section -->
+    <section id="events">
+        <div class "section-content">
+            <h2>Events</h2>
+            <p>At PopLove, we specialize in catering various events, including parties, corporate gatherings, and more. We bring a touch of sweetness to every occasion.</p>
+            <!-- Add more content about your event services here -->
+        </div>
     </section>
 
+    <!-- Catering Section -->
+    <section id="catering">
+        <div class "section-content">
+            <h2>Catering</h2>
+            <p>Our catering services extend to a wide range of events, from kids' parties to corporate meetings. We offer a delectable menu of gelato pops and other delightful creations to make your event memorable.</p>
+            <!-- Add more content about your catering services here -->
+        </div>
+    </section>
+
+    <!-- Menu Section -->
+    <section id="menu">
+        <div class "section-content">
+            <h2>Our Flavors</h2>
+            <div class="flavor">
+                <img src="../images/flavor1.jpg" alt="Flavor 1">
+                <h3>Flavor 1</h3>
+            </div>
+            <div class="flavor">
+                <img src="../images/flavor2.jpg" alt="Flavor 2">
+                <h3>Flavor 2</h3>
+            </div>
+            <!-- Add more flavors as needed -->
+        </div>
+    </section>
+
+    <!-- Contact Us Section -->
     <section id="contact">
-        <!-- Contact Us section content -->
+        <div class "section-content">
+            <h2>Contact Us</h2>
+            <p>Stay connected with us on social media:</p>
+            <div class="social-links">
+                <a href="https://www.instagram.com/your-instagram-profile" target="_blank">
+                    <img src="../images/instagram-icon.png" alt="Instagram Icon">
+                </a>
+                <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">
+                    <img src="../images/linkedin-icon.png" alt="LinkedIn Icon">
+                </a>
+                <a href="https://twitter.com/your-twitter-profile" target="_blank">
+                    <img src="../images/twitter-icon.png" alt="Twitter Icon">
+                </a>
+            </div>
+            <!-- Add more contact information as needed -->
+        </div>
     </section>
 
-    <footer>
-        <p>&copy; 2023 PopLove Central Florida | Contact us at [Your Contact Information]</p>
-    </footer>
+    <!-- The rest of your content goes here -->
 
-    <script src="script.js"></script>
 </body>
 </html>
 
