--- a/Home.html
+++ b/Home.html
@@ -3,100 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PopLove Gelato Pops</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/script.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <title>PopLove Central FL</title>
 </head>
 <body>
+    <!-- Header with color bar -->
     <header>
+        <div class="color-bar"></div>
         <div class="logo-container">
-            <img src="../images/your-logo.png" alt="PopLove Logo" id="company-logo">
-        </div>
-        <div class="header-content">
-            <nav>
-                <ul>
-                    <li><a href="#home" class="header-button">Home</a></li>
-                    <li><a href="#about" class="header-button">About Us</a></li>
-                    <li><a href="#events" class="header-button">Events</a></li>
-                    <li><a href="#catering" class="header-button">Catering</a></li>
-                    <li><a href="#menu" class="header-button">Menu</a></li>
-                    <li><a href="#contact" class="header-button">Contact Us</a></li>
-                </ul>
-            </nav>
+            <img id="company-logo" src="https://i.imgur.com/your-image-url.png" alt="PopLove Logo">
         </div>
     </header>
 
+    <!-- Navigation menu -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#catering-events">Catering and Events</a></li>
+            <li><a href="#flavors">Flavors</a></li>
+            <li><a href="#contact-us">Contact Us</a></li>
+            <li><a href="#poplove-history">PopLove History</a></li>
+            <li><a href="#our-history">Our History</a></li>
+        </ul>
+    </nav>
+
     <!-- Home Section -->
     <section id="home">
-        <!-- Your home section content goes here -->
-    </section>
-
-    <!-- About Us Section -->
-    <section id="about">
         <div class="section-content">
-            <h2>About Us</h2>
-            <p>We are two entrepreneurial mothers who embarked on a journey to bring the joy of authentic artisan gelato to you. Our passion for crafting delightful treats led to the creation of PopLove Gelato Pops.</p>
-            <img src="../images/your-image.jpg" alt="Image of Us" class="about-us-image">
-            <!-- Add more content about your journey and values here -->
+            <h2>Welcome to PopLove Gelato Pops</h2>
+            <p class="product-description">
+                PopLove Gelato Pops represent the perfect fusion of tropical fruits, classic flavors, and the exquisite artistry of Italian gelato. We are passionate about crafting artisanal gelato on a stick that brings joy to your taste buds.
+
+                Our commitment to excellence drives us to create premium, low-sugar popsicles. Through extensive journeys to Italy and countless hours of research, we've mastered our recipes to bring you a truly unique and delightful product.
+
+                POPSICLE FLAVORS:
+                WATER BASED
+
+                Our fruit-based popsicles are a guilt-free indulgence, with only 86 calories each. Made from 100% natural fruit, they contain no preservatives, additives, or added sugars. What you'll find, though, is an abundance of flavor that awakens your senses.
+
+                Our journey began with a simple mission: to offer you a healthier, yet delicious frozen treat. Experience the freshness of tropical fruits in every bite, as we blend tradition and innovation in every PopLove Gelato Pop.
+            </p>
         </div>
     </section>
 
     <!-- Events Section -->
-    <section id="events">
-        <div class "section-content">
-            <h2>Events</h2>
-            <p>At PopLove, we specialize in catering various events, including parties, corporate gatherings, and more. We bring a touch of sweetness to every occasion.</p>
-            <!-- Add more content about your event services here -->
+    <section id="catering-events">
+        <div class="section-content">
+            <h2>Catering and Events</h2>
+            <p>At PopLove, we're not just about popsicles; we're about creating memorable moments. Whether it's a birthday party, a corporate event, or a gathering with friends, we're here to add a touch of sweetness to your special occasions. Our catering services offer a wide range of options, including:</p>
+            <ul>
+                <li>Parties</li>
+                <li>Catering for special events</li>
+                <li>Corporate events</li>
+                <li>Kids' parties</li>
+            </ul>
+            <p>Let us be a part of your celebrations, and we'll bring the joy of PopLove Gelato Pops to your guests.</p>
+            
+            <!-- You can add images or videos of events here -->
         </div>
     </section>
 
-    <!-- Catering Section -->
-    <section id="catering">
-        <div class "section-content">
-            <h2>Catering</h2>
-            <p>Our catering services extend to a wide range of events, from kids' parties to corporate meetings. We offer a delectable menu of gelato pops and other delightful creations to make your event memorable.</p>
-            <!-- Add more content about your catering services here -->
-        </div>
-    </section>
-
-    <!-- Menu Section -->
-    <section id="menu">
-        <div class "section-content">
+    <!-- Menu Section (Add images for each flavor) -->
+    <section id="flavors">
+        <div class="section-content">
             <h2>Our Flavors</h2>
-            <div class="flavor">
-                <img src="../images/flavor1.jpg" alt="Flavor 1">
-                <h3>Flavor 1</h3>
+            <div class="flavor-container">
+                <!-- Add image and title for each flavor -->
+                <div class="flavor">
+                    <img src="flavor1-image.jpg" alt="Flavor 1">
+                    <p>Vanilla Protein</p>
+                </div>
+                <!-- Repeat this for each flavor -->
             </div>
-            <div class="flavor">
-                <img src="../images/flavor2.jpg" alt="Flavor 2">
-                <h3>Flavor 2</h3>
-            </div>
-            <!-- Add more flavors as needed -->
         </div>
     </section>
 
     <!-- Contact Us Section -->
-    <section id="contact">
-        <div class "section-content">
+    <section id="contact-us">
+        <div class="section-content">
             <h2>Contact Us</h2>
-            <p>Stay connected with us on social media:</p>
-            <div class="social-links">
-                <a href="https://www.instagram.com/your-instagram-profile" target="_blank">
-                    <img src="../images/instagram-icon.png" alt="Instagram Icon">
-                </a>
-                <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">
-                    <img src="../images/linkedin-icon.png" alt="LinkedIn Icon">
-                </a>
-                <a href="https://twitter.com/your-twitter-profile" target="_blank">
-                    <img src="../images/twitter-icon.png" alt="Twitter Icon">
-                </a>
+            <p>Get in touch with us on social media:</p>
+            <div class="social-media">
+                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+                <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
             </div>
-            <!-- Add more contact information as needed -->
         </div>
     </section>
 
-    <!-- The rest of your content goes here -->
+    <!-- PopLove History Section -->
+    <section id="poplove-history">
+        <div class="section-content">
+            <h2>PopLove History</h2>
+            <p>The story of PopLove, where we began, and our journey in bringing you the best artisan gelato on a stick.</p>
+        </div>
+    </section>
 
+    <!-- Our History Section -->
+    <section id="our-history">
+        <div class "section-content">
+            <h2>Our History</h2>
+            <p>Learn about the two entrepreneurial mothers who founded our business and their dedication to quality and taste.</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2023 PopLove Central FL</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
 
