--- a/Home.html
+++ b/Home.html
@@ -27,10 +27,7 @@
     </header>
 
     <!-- Home Section -->
-    <section id="home">
-<section id="home" class="background-image">
-    <!-- Your content goes here -->
-</section>
+    <section id="home" class="background-image">
         <!-- Your home section content goes here -->
     </section>
 
@@ -46,7 +43,7 @@
 
     <!-- Events Section -->
     <section id="events">
-        <div class "section-content">
+        <div class="section-content"> <!-- Fixed the 'div' tag here -->
             <h2>Events</h2>
             <p>At PopLove, we specialize in catering various events, including parties, corporate gatherings, and more. We bring a touch of sweetness to every occasion.</p>
             <!-- Add more content about your event services here -->
@@ -55,7 +52,7 @@
 
     <!-- Catering Section -->
     <section id="catering">
-        <div class "section-content">
+        <div class="section-content"> <!-- Fixed the 'div' tag here -->
             <h2>Catering</h2>
             <p>Our catering services extend to a wide range of events, from kids' parties to corporate meetings. We offer a delectable menu of gelato pops and other delightful creations to make your event memorable.</p>
             <!-- Add more content about your catering services here -->
@@ -64,7 +61,7 @@
 
     <!-- Menu Section -->
     <section id="menu">
-        <div class "section-content">
+        <div class="section-content"> <!-- Fixed the 'div' tag here -->
             <h2>Our Flavors</h2>
             <div class="flavor">
                 <img src="../images/flavor1.jpg" alt="Flavor 1">
@@ -80,7 +77,7 @@
 
     <!-- Contact Us Section -->
     <section id="contact">
-        <div class "section-content">
+        <div class="section-content"> <!-- Fixed the 'div' tag here -->
             <h2>Contact Us</h2>
             <p>Stay connected with us on social media:</p>
             <div class="social-links">
@@ -99,7 +96,6 @@
     </section>
 
     <!-- The rest of your content goes here -->
-
 </body>
 </html>
 
