--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="logo-container">
             <img src="your-logo.png" alt="PopLove Logo" id="company-logo">
         </div>
@@ -17,7 +17,6 @@
                 <ul>
                     <li><a href="#home" class="header-button">Home</a></li>
                     <li><a href="#about" class="header-button">About Us</a></li>
-                    <li><a href="#events" class="header-button">Events</a></li>
                     <li><a href="#catering" class="header-button">Catering</a></li>
                     <li><a href="#menu" class="header-button">Menu</a></li>
                     <li><a href="#contact" class="header-button">Contact Us</a></li>
@@ -26,76 +25,32 @@
         </div>
     </header>
 
-    <!-- Home Section -->
-    <section id="home" class="background-image">
-        <!-- Your home section content goes here -->
-    </section>
+    <section id="home" class="home-section">
+    <div class="background-image">
+        <!-- Your wave design or background image here -->
+    </div>
+    <div class="section-content">
+        <h2>Welcome to PopLove Gelato Pops</h2>
+        <p class="product-description">
+            PopLove Gelato Pops represent the perfect fusion of tropical fruits, classic flavors, and the exquisite artistry of Italian gelato. We are passionate about crafting artisanal gelato on a stick that brings joy to your taste buds.
 
-    <!-- About Us Section -->
-    <section id="about">
-        <div class="section-content">
-            <h2>About Us</h2>
-            <p>We are two entrepreneurial mothers who embarked on a journey to bring the joy of authentic artisan gelato to you. Our passion for crafting delightful treats led to the creation of PopLove Gelato Pops.</p>
-            <img src="marce-male.png" alt="Image of Us" class="about-us-image">
-            <!-- Add more content about your journey and values here -->
+            Our commitment to excellence drives us to create premium, low-sugar popsicles. Through extensive journeys to Italy and countless hours of research, we've mastered our recipes to bring you a truly unique and delightful product.
+
+            POPSICLE FLAVORS:
+            WATER BASED
+
+            Our fruit-based popsicles are a guilt-free indulgence, with only 86 calories each. Made from 100% natural fruit, they contain no preservatives, additives, or added sugars. What you'll find, though, is an abundance of flavor that awakens your senses.
+
+            Our journey began with a simple mission: to offer you a healthier, yet delicious frozen treat. Experience the freshness of tropical fruits in every bite, as we blend tradition and innovation in every PopLove Gelato Pop.
+        </p>
+        <!-- Add more content or styling as needed -->
+        <div class="image-container">
+            <img src="image1.jpg" alt="Image 1">
+            <img src="image2.jpg" alt="Image 2">
         </div>
-    </section>
-
-    <!-- Events Section -->
-    <section id="events">
-        <div class="section-content"> <!-- Fixed the 'div' tag here -->
-            <h2>Events</h2>
-            <p>At PopLove, we specialize in catering various events, including parties, corporate gatherings, and more. We bring a touch of sweetness to every occasion.</p>
-            <!-- Add more content about your event services here -->
-        </div>
-    </section>
-
-    <!-- Catering Section -->
-    <section id="catering">
-        <div class="section-content"> <!-- Fixed the 'div' tag here -->
-            <h2>Catering</h2>
-            <p>Our catering services extend to a wide range of events, from kids' parties to corporate meetings. We offer a delectable menu of gelato pops and other delightful creations to make your event memorable.</p>
-            <!-- Add more content about your catering services here -->
-        </div>
-    </section>
-
-    <!-- Menu Section -->
-    <section id="menu">
-        <div class="section-content"> <!-- Fixed the 'div' tag here -->
-            <h2>Our Flavors</h2>
-            <div class="flavor">
-                <img src="../images/flavor1.jpg" alt="Flavor 1">
-                <h3>Flavor 1</h3>
-            </div>
-            <div class="flavor">
-                <img src="../images/flavor2.jpg" alt="Flavor 2">
-                <h3>Flavor 2</h3>
-            </div>
-            <!-- Add more flavors as needed -->
-        </div>
-    </section>
-
-    <!-- Contact Us Section -->
-    <section id="contact">
-        <div class="section-content"> <!-- Fixed the 'div' tag here -->
-            <h2>Contact Us</h2>
-            <p>Stay connected with us on social media:</p>
-            <div class="social-links">
-                <a href="https://www.instagram.com/your-instagram-profile" target="_blank">
-                    <img src="../images/instagram-icon.png" alt="Instagram Icon">
-                </a>
-                <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">
-                    <img src="../images/linkedin-icon.png" alt="LinkedIn Icon">
-                </a>
-                <a href="https://twitter.com/your-twitter-profile" target="_blank">
-                    <img src="../images/twitter-icon.png" alt="Twitter Icon">
-                </a>
-            </div>
-            <!-- Add more contact information as needed -->
-        </div>
-    </section>
-
-    <!-- The rest of your content goes here -->
+    </div>
+</section>
+<!-- Rest of your content goes here -->
 </body>
 </html>
 
