--- a/Index.html
+++ b/Index.html
@@ -1,102 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PopLove Gelato Pops</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/script.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="logo-container">
-            <img src="../images/your-logo.png" alt="PopLove Logo" id="company-logo">
+            <img src="Images/your-logo.png" alt="PopLove Logo" id="company-logo">
         </div>
         <div class="header-content">
             <nav>
                 <ul>
-                    <li><a href="#home" class="header-button">Home</a></li>
-                    <li><a href="#about" class="header-button">About Us</a></li>
-                    <li><a href="#events" class="header-button">Events</a></li>
-                    <li><a href="#catering" class="header-button">Catering</a></li>
-                    <li><a href="#menu" class="header-button">Menu</a></li>
-                    <li><a href="#contact" class="header-button">Contact Us</a></li>
+                    <li><a href="Index.html" class="header-button">Home</a></li>
+                    <li><a href="About.html" class="header-button">About Us</a></li>
+                    <li><a href="Events.html" class="header-button">Events & Catering</a></li>
+                    <li><a href="Menu.html" class="header-button">Menu</a></li>
+                    <li><a href="Contac.html" class="header-button">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Home Section -->
-    <section id="home">
-        <!-- Your home section content goes here -->
-    </section>
+    <section id="home" class="home-section">
+    <div class="background-image-section">
 
-    <!-- About Us Section -->
-    <section id="about">
-        <div class="section-content">
-            <h2>About Us</h2>
-            <p>We are two entrepreneurial mothers who embarked on a journey to bring the joy of authentic artisan gelato to you. Our passion for crafting delightful treats led to the creation of PopLove Gelato Pops.</p>
-            <img src="../images/your-image.jpg" alt="Image of Us" class="about-us-image">
-            <!-- Add more content about your journey and values here -->
+        <div class="image-container">
+            <img src="Images/image1.jpg" alt="Image 1">
+            <img src="Images/image2.jpg" alt="Image 2">
+            <img src="Images/image3.jpg" alt="Image 3">
         </div>
-    </section>
-
-    <!-- Events Section -->
-    <section id="events">
-        <div class "section-content">
-            <h2>Events</h2>
-            <p>At PopLove, we specialize in catering various events, including parties, corporate gatherings, and more. We bring a touch of sweetness to every occasion.</p>
-            <!-- Add more content about your event services here -->
+          <div class="melting-color-wave"></div>
+        <div class="text-container">
+            <h1>Discover PopLove Gelato Pops</h1>
+            <p>Step into a world of extraordinary frozen delights at PopLove Gelato. Our gelato pops are the embodiment of passion, creativity, and unforgettable taste. We handcraft each pop with the finest ingredients, sourced globally, to bring you a symphony of flavors.</p>
+            <p>Experience the joy of a refreshing burst of gelato encased in a crisp shell, a treat that's perfect for any occasion. From classic flavors to unique, seasonal creations, PopLove Gelato is a celebration of artistry and flavor that transcends expectations.</p>
+            <p>Come savor the magic that is PopLove Gelato, where every bite is a journey into pure happiness. Join us in exploring the world of taste, one gelato pop at a time.</p>
         </div>
-    </section>
 
-    <!-- Catering Section -->
-    <section id="catering">
-        <div class "section-content">
-            <h2>Catering</h2>
-            <p>Our catering services extend to a wide range of events, from kids' parties to corporate meetings. We offer a delectable menu of gelato pops and other delightful creations to make your event memorable.</p>
-            <!-- Add more content about your catering services here -->
-        </div>
-    </section>
-
-    <!-- Menu Section -->
-    <section id="menu">
-        <div class "section-content">
-            <h2>Our Flavors</h2>
-            <div class="flavor">
-                <img src="../images/flavor1.jpg" alt="Flavor 1">
-                <h3>Flavor 1</h3>
-            </div>
-            <div class="flavor">
-                <img src="../images/flavor2.jpg" alt="Flavor 2">
-                <h3>Flavor 2</h3>
-            </div>
-            <!-- Add more flavors as needed -->
-        </div>
-    </section>
-
-    <!-- Contact Us Section -->
-    <section id="contact">
-        <div class "section-content">
-            <h2>Contact Us</h2>
-            <p>Stay connected with us on social media:</p>
-            <div class="social-links">
-                <a href="https://www.instagram.com/your-instagram-profile" target="_blank">
-                    <img src="../images/instagram-icon.png" alt="Instagram Icon">
-                </a>
-                <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">
-                    <img src="../images/linkedin-icon.png" alt="LinkedIn Icon">
-                </a>
-                <a href="https://twitter.com/your-twitter-profile" target="_blank">
-                    <img src="../images/twitter-icon.png" alt="Twitter Icon">
-                </a>
-            </div>
-            <!-- Add more contact information as needed -->
-        </div>
-    </section>
-
-    <!-- The rest of your content goes here -->
-
+<footer class="footer">
+    <div class="copyright">
+        <p>&copy; PopLove.us 2023 - All rights reserved.</p>
+    </div>
+    <div class="social-links">
+    <a href="https://www.instagram.com/poplovecentralfl" class="social-icon" target="_blank">
+    <i class="fab fa-instagram"></i>
+</a>
+<a href="https://twitter.com/PopLoveCFL" class="social-icon" target="_blank">
+    <i class="fab fa-twitter"></i>
+</a>
+<a href="mailto:poplovecentralflorida@gmail.com" class="social-icon" target="_blank">
+    <i class="fas fa-envelope"></i>
+</a>
+<a href="https://www.linkedin.com/in/pop-love-a494b6292" class="social-icon" target="_blank">
+    <i class="fab fa-linkedin"></i>
+</a>
+</div>
+</footer>
 </body>
 </html>
+
+
 
